--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -1,13 +1,14 @@
 @import '~bootstrap/scss/bootstrap';
 @import './admin.scss';
 
+
 .container{
     max-width: 1660px;
 }
-.container-fluid {
-    padding-right: 5px;
+// .container-fluid {
+//     padding-right: 5px;
     
-}
+// }
 .fa, .fas {
     font-size: 18px;
 }
@@ -24,7 +25,7 @@ body{
     font-family: 'Nunito', sans-serif !important;
 }
 .custom-btn{
-    // border-radius: 10rem;
+    border-radius: 10rem;
     padding: 0.5rem 2.5rem;
 }
 // hide scroll bar
@@ -46,4 +47,29 @@ body{
         max-width: 1200px;
     }
 
+}
+
+
+.form-label {
+    display: block;
+    font-weight: 700;
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: space-between;
+    color: #5f6d84;
+}
+
+.shadow-lg {
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175) !important;
+}
+
+
+.card-register {
+    padding: 15px;
+    border: none;
+    border-radius: 15px;
+}
+.router-link-exact-active {
+    // background-color: #5f6d84;
+    color: rgb(45, 163, 10) !important;
 }
